# workflow-autopilot

./: .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  action_executor.py  analytics.py  api.py  engine.py  integrations.py  scheduler.py  trigger_system.py  workflow_builder.py
tests/: test_api.py  test_basic.py
